# agentfit-py

./: README.md  pyproject.toml
src/agentfit/: __init__.py  core.py
tests/: test_agentfit.py
