[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agentfit"
version = "0.1.0"
description = "Token-aware message truncation for LLM context windows. Four strategies (head/tail/middle/slide), BYO tokenizer, zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "llm",
  "agents",
  "context-window",
  "truncation",
  "token-budget",
  "message-history",
  "ai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff>=0.4"]
tiktoken = ["tiktoken>=0.6"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agentfit-py"
Issues = "https://github.com/MukundaKatta/agentfit-py/issues"
Source = "https://github.com/MukundaKatta/agentfit-py"
"Rust sibling" = "https://github.com/MukundaKatta/agentfit-rs"
"JS sibling" = "https://github.com/MukundaKatta/agentfit"

[tool.hatch.build.targets.wheel]
packages = ["src/agentfit"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
